--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -27,6 +25,5 @@
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
     "vite": "^5.4.0"
-  },
-  "homepage": "https://joycie416.github.io/olympic_ranking/"
+  }
 }
